# backend-aws-lib

./: .gitignore  AGENTS.md  README.md  pyproject.toml  tox.ini
.github/workflows/: github-actions.yml
crczp/aws_driver/: aws_client.py  exceptions.py
