[project]
name = "crczp-aws-lib"
version = "1.0.2"
description = "Cyberrangecz platform AWS Driver Python lib"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Juraj Paluba", email = "4492988@mail.muni.cz" }]
dependencies = [
    "PyYAML>=6.0.2",
    "crczp-python-commons~=1.0.1",
    "jinja2>=3.1.3",
    "boto3>=1.38.40"
]

[project.urls]
GitHub = "https://github.com/cyberrangecz/backend-aws-lib"

[build-system]
# TODO: Replace this with uv_build when it is it released for GA.
#   https://github.com/astral-sh/uv/issues/3957
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crczp"]
exclude-packages = ["tests"]

[tool.ruff]
line-length = 127
preview = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
strict = true
enable_error_code = ["deprecated", "explicit-override"]

[tool.pylint]
# You can add pylint configs here or in .pylintrc

[tool.bandit]
skips = ["B101"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
